deleted some file

--- a/test-output/SparkReport/Index.html
+++ b/test-output/SparkReport/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Practice Bijendra</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jul 18, 2021 07:56:43 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jul 24, 2021 01:21:26 AM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jul 18, 2021 07:56:43 PM</h3>
+<h3>Jul 24, 2021 01:21:26 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jul 18, 2021 07:57:58 PM</h3>
+<h3>Jul 24, 2021 01:23:51 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login page feature":74.623,"Account Page feature":60.175
+"Account Page feature":88.026,"Login page feature":56.911
 };
 </script>
 <div class="row">
@@ -234,25 +234,25 @@ eventsCount: 5,
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login page feature</p>
+            <p class="name">Account Page feature</p>
             <p class="text-sm">
-              <span>19:56:44 PM</span> / <span>00:01:14:623</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>01:21:27 AM</span> / <span>00:01:28:026</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Login page feature</h5>
-<span class='badge badge-success'>07.18.2021 19:56:44</span>
-<span class='badge badge-danger'>07.18.2021 19:57:58</span>
-<span class='badge badge-default'>00:01:14:623</span>
+<h5 class="test-status text-pass">Account Page feature</h5>
+<span class='badge badge-success'>07.24.2021 01:21:27</span>
+<span class='badge badge-danger'>07.24.2021 01:22:55</span>
+<span class='badge badge-default'>00:01:28:026</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -262,22 +262,118 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login page title</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Account page title</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_is_on_login_page()">
-                <span>Given user is on login page</span>
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.user_has_already_logged_into_application(io.cucumber.datatable.DataTable)">
+                <span>Given user has already logged into application</span>
+      <div><table class='markup-table table '><tr><td>username</td><td>password</td></tr><tr><td>yuvraj26707@gmail.com</td><td>Selenum@12345</td></tr></table>
+      </div>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_gets_the_title_of_the_page()">
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.user_is_on_account_page()">
+                <span>Given user is on account page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_gets_the_title_of_the_page()">
                 <span>When user gets the title of the page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.page_title_should_be(java.lang.String)">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.page_title_should_be(java.lang.String)">
+                <span>Then page title should be "My account - My Store"</span>
+      <div>
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="11"><span class="badge log pass-bg mr-2">Pass</span>Account section count</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.user_has_already_logged_into_application(io.cucumber.datatable.DataTable)">
+                <span>Given user has already logged into application</span>
+      <div><table class='markup-table table '><tr><td>username</td><td>password</td></tr><tr><td>yuvraj26707@gmail.com</td><td>Selenum@12345</td></tr></table>
+      </div>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.user_is_on_account_page()">
+                <span>Given user is on account page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.user_gets_accounts_section(io.cucumber.datatable.DataTable)">
+                <span>Then user gets accounts section</span>
+      <div><table class='markup-table table '><tr><td>ORDER HISTORY AND DETAILS</td></tr><tr><td>MY CREDIT SLIPS</td></tr><tr><td>MY ADDRESSES</td></tr><tr><td>MY PERSONAL INFORMATION</td></tr><tr><td>MY WISHLISTS</td></tr><tr><td>Home</td></tr></table>
+      </div>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.AccountsPageSteps.account_section_count_should_be(java.lang.Integer)">
+                <span>And account section count should be 6</span>
+      <div>
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="fail" test-id="20"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">Login page feature</p>
+            <p class="text-sm">
+              <span>01:22:55 AM</span> / <span>00:00:56:911</span>
+              <span class="badge fail-bg log float-right">Fail</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-fail">Login page feature</h5>
+<span class='badge badge-success'>07.24.2021 01:22:55</span>
+<span class='badge badge-danger'>07.24.2021 01:23:51</span>
+<span class='badge badge-default'>00:00:56:911</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=20</span>
+</div>
+<div class="m-t-10 m-l-5"></div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="21"><span class="badge log pass-bg mr-2">Pass</span>Login page title</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_is_on_login_page()">
+                <span>Given user is on login page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_gets_the_title_of_the_page()">
+                <span>When user gets the title of the page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="parallel.LoginPageSteps.page_title_should_be(java.lang.String)">
                 <span>Then page title should be "Login - My Store"</span>
       <div>
       </div>
@@ -288,17 +384,17 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="15"><span class="badge log pass-bg mr-2">Pass</span>Forgot password link</div>
+        <div class="node" id="29"><span class="badge log pass-bg mr-2">Pass</span>Forgot password link</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_is_on_login_page()">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_is_on_login_page()">
                 <span>Given user is on login page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.forgot_password_page_should_be_displayed()">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.forgot_password_page_should_be_displayed()">
                 <span>Then Forgot password page should be displayed</span>
       <div>
       </div>
@@ -317,148 +413,52 @@ eventsCount: 5,
     </div>
         <div class="">
           <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_is_on_login_page()">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_is_on_login_page()">
                 <span>Given user is on login page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_enters_username(java.lang.String)">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_enters_username(java.lang.String)">
                 <span>When user enters username "yuvraj26707@gmail.com"</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_enters_password(java.lang.String)">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_enters_password(java.lang.String)">
                 <span>And user enters password "Selenum@12345"</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_clicks_on_login_button()">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_clicks_on_login_button()">
                 <span>And user clicks on Login button</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_gets_the_title_of_the_page()">
+              <div class="step pass-bg" title="parallel.LoginPageSteps.user_gets_the_title_of_the_page()">
                 <span>Then user gets the title of the page</span>
       <div>
       </div>
               </div>
-              <div class="step fail-bg" title="stepdefinitions.LoginPageSteps.page_title_should_be(java.lang.String)">
+              <div class="step fail-bg" title="parallel.LoginPageSteps.page_title_should_be(java.lang.String)">
                 <span>And page title should be "My account - My Store"</span>
       <div>
         <textarea disabled class="code-block">java.lang.AssertionError
 	at org.junit.Assert.fail(Assert.java:87)
 	at org.junit.Assert.assertTrue(Assert.java:42)
 	at org.junit.Assert.assertTrue(Assert.java:53)
-	at stepdefinitions.LoginPageSteps.page_title_should_be(LoginPageSteps.java:30)
-	at ?.page title should be "My account - My Store"(file:///C:/Users/Bijendra/eclipse-workspace/CucumberFrameworkDesignPractice/src/test/resources/com/Feature/loginPage.feature:19)
+	at parallel.LoginPageSteps.page_title_should_be(LoginPageSteps.java:30)
+	at ?.page title should be "My account - My Store"(file:///C:/Users/Bijendra/eclipse-workspace/GIT/CucumberFrameworkDesignPractice/src/test/resources/com/Feature/loginPage.feature:19)
 </textarea>
       
       </div>
               </div>
               <div class="step pass-bg" title="AFTER">
-                <span>appHooks.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
+                <span>parallel.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
       <div>Login_with_Correct_credentials
           <div class="row mb-3"><div class="col-md-3">
     <img data-featherlight='../embedded1.png' src="../embedded1.png">
     
     </div></div>
 </div>
-      <div>
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="3"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
-            <p class="name">Account Page feature</p>
-            <p class="text-sm">
-              <span>19:56:44 PM</span> / <span>00:01:00:175</span>
-              <span class="badge pass-bg log float-right">Pass</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-pass">Account Page feature</h5>
-<span class='badge badge-success'>07.18.2021 19:56:44</span>
-<span class='badge badge-danger'>07.18.2021 19:57:44</span>
-<span class='badge badge-default'>00:01:00:175</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
-</div>
-<div class="m-t-10 m-l-5"></div>
-</div>
-</div>
-<div class="accordion mt-4">
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="4"><span class="badge log pass-bg mr-2">Pass</span>Account page title</div>
-      </div>
-    </div>
-        <div class="collapse">
-          <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.user_has_already_logged_into_application(io.cucumber.datatable.DataTable)">
-                <span>Given user has already logged into application</span>
-      <div><table class='markup-table table '><tr><td>username</td><td>password</td></tr><tr><td>yuvraj26707@gmail.com</td><td>Selenum@12345</td></tr></table>
-      </div>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.user_is_on_account_page()">
-                <span>Given user is on account page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_gets_the_title_of_the_page()">
-                <span>When user gets the title of the page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.page_title_should_be(java.lang.String)">
-                <span>Then page title should be "My account - My Store"</span>
-      <div>
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="23"><span class="badge log pass-bg mr-2">Pass</span>Account section count</div>
-      </div>
-    </div>
-        <div class="collapse">
-          <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.user_has_already_logged_into_application(io.cucumber.datatable.DataTable)">
-                <span>Given user has already logged into application</span>
-      <div><table class='markup-table table '><tr><td>username</td><td>password</td></tr><tr><td>yuvraj26707@gmail.com</td><td>Selenum@12345</td></tr></table>
-      </div>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.user_is_on_account_page()">
-                <span>Given user is on account page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.user_gets_accounts_section(io.cucumber.datatable.DataTable)">
-                <span>Then user gets accounts section</span>
-      <div><table class='markup-table table '><tr><td>ORDER HISTORY AND DETAILS</td></tr><tr><td>MY CREDIT SLIPS</td></tr><tr><td>MY ADDRESSES</td></tr><tr><td>MY PERSONAL INFORMATION</td></tr><tr><td>MY WISHLISTS</td></tr><tr><td>Home</td></tr></table>
-      </div>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepdefinitions.AccountsPageSteps.account_section_count_should_be(java.lang.Integer)">
-                <span>And account section count should be 6</span>
       <div>
       </div>
               </div>
@@ -509,9 +509,9 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>19:57:57 PM</td>
+<td>01:23:42 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='44'>And page title should be "My account - My Store"</a>
+<a href="#" class="linked" test-id='20' id='44'>And page title should be "My account - My Store"</a>
 <div class="">
 <span class="badge badge-default">Login page feature.Login with Correct credentials.And page title should be "My account - My Store"</span>
 </div>
